Fix hero z-index

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,7 @@
  */
 
 .hero {
+  background: #84A1CD;
   height: 900px;
   margin-bottom: -1px;
   overflow: hidden;
@@ -22,7 +23,13 @@
   left: 0;
   right: 0;
   opacity: .8;
-  z-index: -1;
+  z-index: 2;
+}
+
+.hero .content,
+.hero .logo {
+  position: relative;
+  z-index: 4;
 }
 
 .hero .logo {
@@ -45,13 +52,14 @@
   height: 100%;
   margin: 0;
   inset: 0;
-  z-index: -2;
+  z-index: 0;
 }
 
 .hero .foreground {
   min-width: calc(100% + 3rem);
   left: -1.5rem;
   position: relative;
+  z-index: 1;
 }
 
 .hero .divider {
@@ -61,6 +69,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  z-index: 3;
 }
 
 @media (--desktop) {
@@ -90,7 +99,6 @@
     height: 100%;
     margin: 0;
     inset: 0;
-    z-index: -1;
   }
 
   .hero .foreground * {
@@ -111,6 +119,8 @@
 
 .about-the-program {
   background: var(--dark-blue);
+  position: relative;
+  z-index: 5;
 }
 
 .about-the-program .section {
@@ -137,7 +147,6 @@
   position: absolute;
   inset: 0;
   margin: auto;
-  z-index: -1;
 }
 
 .about-the-program .scoreboard::before {
@@ -146,6 +155,8 @@
   border-radius: 100%;
   width: 100%;
   height: 100%;
+  z-index: -2;
+  transform: translate3d(0,0,0);
 }
 
 .about-the-program .scoreboard::after {
@@ -153,7 +164,8 @@
   border-radius: 100%;
   width: calc(100% - 1.25rem);
   height: calc(100% - 1.25rem);
-  
+  z-index: -1;
+  transform: translate3d(0,0,0);
 }
 
 @keyframes rotating {
